<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
    <ImageView
        android:id="@+id/equipmentCard1"
        android:layout_width="100dip"
        android:layout_height="150dip"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/cardback"
        />
    <ImageView
        android:id="@+id/equipmentCard2"
        android:layout_width="100dip"
        android:layout_height="150dip"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:src="@drawable/cardback"
        />
    <ImageView
        android:id="@+id/equipmentCard3"
        android:layout_width="100dip"
        android:layout_height="150dip"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:src="@drawable/cardback"/>

    </LinearLayout>




        <ImageView
            android:id="@+id/equipPageCapsuleLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/capsule"
            >
        </ImageView>



        <ImageView
            android:id="@+id/equipPageBottleLogoLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/bottlelogo"
            >
        </ImageView>







        <LinearLayout
            android:id="@+id/equipPageBookmarkLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="75dip"
                    android:layout_height="100dip"
                    android:src="@drawable/bookmark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/bookmarkName"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/bookmarkEffect"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/bookmarkSuitable"/>

                <TextView
                    android:id="@+id/equipmentPageBookmarkQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:text="數量:"/>

            </LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:id="@+id/equipPageBookClothingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="75dip"
                    android:layout_height="100dip"
                    android:src="@drawable/bookclothing"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/bookclothingName"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/bookclothingEffect"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/bookclothingSuitable"/>

                <TextView
                    android:id="@+id/equipmentPageBookClothingQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:text="數量:"/>

            </LinearLayout>
        </LinearLayout>





        <ImageView
            android:id="@+id/equipPageCupSetLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/cupset"
            >
        </ImageView>





        <ImageView
            android:id="@+id/equipPagePullRingLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/pullring"
            >
        </ImageView>




        <ImageView
            android:id="@+id/equipPageChopsticksLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/chopsticks"
            >
        </ImageView>








        <ImageView
            android:id="@+id/equipPageChickenLegsLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/chickenlegs"
            >

        </ImageView>




        <ImageView
            android:id="@+id/equipPageCoasterLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/coaster"
            >
        </ImageView>







        <ImageView
            android:id="@+id/equipPageInstantDrinkLayout"
            android:layout_width="match_parent"
            android:layout_height="450dip"
            android:src="@drawable/instantdrink"
            >

        </ImageView>








    </LinearLayout>
</ScrollView>
</LinearLayout>
