<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_main"
    tools:context="com.example.boan.firebasep.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >
        
        <Button
            android:id="@+id/review_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:background="@color/btn_scan_bg"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="戰鬥配置"
            android:background="@color/btn_search_bg"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/barcomon_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcomon"
            android:background="@color/btn_barcomon_bg"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drawBarCoMon_button"
            android:text="@string/DrawMonster_button"
            android:background="@color/btn_drawBarCoMon"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/battle_button"
            android:text="怪獸戰鬥"
            android:background="@color/btn_drawBarCoMon"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="User Login"
            android:background="@color/bg_login"
            android:id="@+id/textViewUserEmail"
            android:layout_gravity="center_horizontal"

            />




    </LinearLayout>

    <LinearLayout android:id="@+id/test_bottom_buttons"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:layout_alignParentBottom="true">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/buttonLogout"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>


</RelativeLayout>
